# mlflow-ex

./: .gitignore  README.md  deeplearning.py  initonline.py  iris_statis.py  online_model.joblib  preprocess.py  preprocessing.ipynb  preprocessor_pipeline.joblib  pyproject.toml  testingdl.py
